fix(be): migrated function to be
